<resources>
    <string name="app_name">Погодное приложение</string>
    <string name="heading" translatable="true">Всё о погоде!</string>
    <string name="city_chosen" translatable="true">Город</string>
    <string name="please_choose_city" translatable="true">Выберите ваш город:</string>
    <string name="city_hint" translatable="true">Ваш город</string>
    <string name="weather_data_view">Weather data view</string>
    <string name="update_weather_button" translatable="true">Показать погоду</string>
    <string name="wind_speed_checkbox" translatable="true">Скорость ветра</string>
    <string name="air_pressure_checkbox" translatable="true">Атмосферное давление</string>
    <string name="humidity_checkbox" translatable="true">Влажность воздуха</string>
    <string name="additional_params_textview" translatable="true">Показать дополнительные параметры:</string>
    <string name="popular_cities_textview" translatable="true">Популярные города:</string>
    <string name="choose_city_button" translatable="true">Выбрать город</string>
    <string-array name="cityNames">
        <item>Москва</item>
        <item>Лондон</item>
        <item>Мумбаи</item>
        <item>Лагос</item>
    </string-array>

</resources>