<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewAllAboutWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/heading"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/imageViewWeatherWidget"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewWeatherWidget"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/weather_data_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAllAboutWeather"
        app:srcCompat="@drawable/weather_khimki_png" />

    <Button
        android:id="@+id/buttonChooseCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_city_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewWeatherWidget"
        android:layout_marginTop="24dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>